# todo-list-mcp

./: README.md  client.py  pyproject.toml  server.py
src/: __init__.py  config.py
src/models/: __init__.py  todo.py
src/services/: __init__.py  database_service.py  todo_service.py
src/utils/: __init__.py  formatters.py
